<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Game" >

    <com.game.rogueadventure.Graphics
        android:id="@+id/graphics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/right"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_above="@+id/down"
        android:layout_alignRight="@+id/graphics"
        android:alpha="0.5"
        android:onClick="move"
        android:text="@string/right" />

    <Button
        android:id="@+id/down"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/graphics"
        android:layout_toLeftOf="@+id/right"
        android:alpha="0.5"
        android:onClick="move"
        android:text="@string/down" />

    <Button
        android:id="@+id/up"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_above="@+id/right"
        android:layout_toLeftOf="@+id/right"
        android:alpha="0.5"
        android:onClick="move"
        android:text="@string/up" />

    <Button
        android:id="@+id/left"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_above="@+id/down"
        android:layout_toLeftOf="@+id/down"
        android:alpha="0.5"
        android:onClick="move"
        android:text="@string/left" />

    <Button
        android:id="@+id/attackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/right"
        android:layout_alignRight="@+id/up"
        android:layout_below="@+id/up"
        android:layout_toRightOf="@+id/left"
        android:alpha="0.5"
        android:onClick="attack"
        android:text="@string/coolChar" />

    <Button
        android:id="@+id/upLeft"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_above="@+id/left"
        android:layout_alignLeft="@+id/left"
        android:alpha="0.5"
        android:onClick="move" />

    <Button
        android:id="@+id/upRight"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_above="@+id/right"
        android:layout_alignLeft="@+id/right"
        android:alpha="0.5"
        android:onClick="move" />

    <Button
        android:id="@+id/downLeft"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/left"
        android:layout_below="@+id/left"
        android:alpha="0.5"
        android:onClick="move" />

    <Button
        android:id="@+id/downRight"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/right"
        android:layout_below="@+id/right"
        android:alpha="0.5"
        android:onClick="move" />

    <com.game.rogueadventure.EventLog
        android:id="@+id/EventLogTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/graphics"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/up"
        android:layout_alignRight="@+id/graphics"
        android:layout_alignTop="@+id/graphics"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/healthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:text="@string/Health"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorLink="@color/white"
            android:textSize="12sp" />

        <ProgressBar
            android:id="@+id/heathBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:minHeight="2dip" />

        <TextView
            android:id="@+id/manaTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:text="@string/mana"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorLink="@color/white"
            android:textSize="12sp" />

        <ProgressBar
            android:id="@+id/manaBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:minHeight="2dp" />

        <TextView
            android:id="@+id/expTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Experience"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorLink="@color/white"
            android:textSize="12sp" />

        <ProgressBar
            android:id="@+id/expBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:maxHeight="2dp"
            android:minHeight="2dip" />

        <TextView
            android:id="@+id/buffTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:text="@string/Buff"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorLink="@color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:id="@+id/InventoryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/downLeft"
        android:layout_alignBottom="@+id/downLeft"
        android:layout_alignLeft="@+id/graphics"
        android:alpha="0.5"
        android:text="@string/Inventory" />

    <Button
        android:id="@+id/MagicFireballBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/left"
        android:layout_alignLeft="@+id/graphics"
        android:layout_alignRight="@+id/HealMagicBtn"
        android:alpha="0.5"
        android:onClick="fireball"
        android:text="@string/Fireball" />

    <Button
        android:id="@+id/HealMagicBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/MagicFireballBtn"
        android:layout_alignLeft="@+id/graphics"
        android:layout_alignRight="@+id/InventoryBtn"
        android:alpha="0.5"
        android:onClick="heal"
        android:text="@string/healMagic" />

</RelativeLayout>